--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NEW UI</title>
-  </head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="description" content="Join the most exciting online gaming experience. Enjoy slots, card games, live casino, and more with high payouts and secure play. Start winning today!" />
+      <meta name="author" content="MK7" />
+       <meta property="og:image" content="/images/logo.png"/>
+       <link rel="icon" href="/images/logo.png" type="image/x-icon" sizes="16x16"/>
+      <meta property="og:title" content="MK7 - Best Online Gaming Platform for Slots, Cards & Casino"/>
+      <meta property="og:site_name" content="MK7"/>
+      <meta property="og:type" content="website"/>
+
+     <title>MK7 - Best Online Gaming Platform for Slots, Cards & Casino</title>
+<meta name="description" content="Join the most exciting online gaming experience. Enjoy slots, card games, live casino, and more with high payouts and secure play. Start winning today!" />
+
+      
+   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
